Update subnav and button color

--- a/index2.html
+++ b/index2.html
@@ -143,7 +143,7 @@
                   <i class="fad fa-print"></i>PRINT</button>
                 <button type="button" class="btn btn-secondary">
                   <i class="fas fa-save"></i>SAVE ORDER</button>
-                <button type="button" class="btn btn-secondary">REVIEW ORDER</button>
+                <button type="button" class="btn btn-black" onclick="addToOrder()">REVIEW ORDER</button>
               </div>
             </div>
           </div>
@@ -162,7 +162,7 @@
                         <label for="search-account-name" class="col-sm-5 col-form-label">Company Name</label>
                         <div class="col-sm-7">
                           <form class="d-flex">
-                            <input id="search-account-name" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                            <input id="search-account-name" class="form-control" type="search" placeholder="Search" aria-label="Search">
                           </form>
                         </div>
                       </div>
