--- a/index2.html
+++ b/index2.html
@@ -153,6 +153,7 @@
                   <div class="row ">
                     <div class="col-6">
                       <div class="mb-3 row">
+                        <input type="hidden" class="form-control" id="companyId">
                         <label for="search-account-name" class="col-sm-5 col-form-label">Company Name</label>
                         <div class="col-sm-7 position-relative">
                           <input id="search-account-name" class="form-control" type="search" placeholder="Search" aria-label="Search" required>
@@ -198,7 +199,7 @@
                   <h4>Shipping Information</h4>
                   <div class="mb-3 row">
                     <div class="col-sm-6">
-                      <select id="shippingaddress" class="form-select" required>
+                      <select id="deliveryMethod" class="form-select" required>
                         <option value="delievery">Delivery</option>
                         <option value="pickup">Pick Up</option>
                       </select>
@@ -218,7 +219,7 @@
                   <div class="mb-3 row">
                     <div class="col-12">
                       <select id="shippingaddress" class="form-select">
-                        <option value="">Level 3, 353 Burwood Highway Forest Hill, Victoria 3131</option>
+                        <option value="Level 3, 353 Burwood Highway Forest Hill, Victoria 3131">Level 3, 353 Burwood Highway Forest Hill, Victoria 3131</option>
                       </select>
                     </div>
                   </div>
